rushmore/app/resources/css/marketing.css
/* ... */
.pure-game-button:active {
    background-image: linear-gradient(transparent, rgba(0, 0, 0, .05) 30%, rgba(0, 0, 0, .3));
}
.pure-game-button:hover {

    /*    background-image: linear-gradient(transparent,rgba(0,0,0,.00) 40%,rgba(0,0,0,.01));
    */
}

/*
 * -- MENU STYLES --
 * I want to customize how my .pure-menu looks at the top of the page
 */
.home-menu {
    padding: 0.5em;
    text-align: center;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.10);
    background: #2d3e50;
    width: 100%;
    position: fixed;
    left: 0;
    top: 0;
}
.pure-menu.pure-menu-fixed {

    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
    height: 10%;

}
.home-menu .pure-menu-heading {
    color: white;
    font-weight: 400;
    font-size: 100%;
    text-decoration: none;
    padding: .3em 1em;

}
.home-menu a {
    color: #6FBEF3;
}

/* This is the input box heading that appears on the blue section */
.input-box {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    color: rgba(21, 21, 21, 1);
    border: 3px solid rgba(21, 21, 21, 1);
    background-color: #ECF0F1;
    padding: 1em 1.6em;
    font-weight: 100;
    border-radius: 5px;
    line-height: 1em;
    font: inherit;
}
.deploy-button {
    background-color: white;
    color: rgba(21, 21, 21, 1);
    padding: 0.5em 2em;
    border-radius: 5px;
    font-size: 25px;
    font-weight: 100;
    font: inherit;
}

/*
 * -- SPLASH STYLES --
 * This is the blue top section that appears on the page.
 */
#main-container {
    z-index: 1;
    overflow: hidden;    /* The following styles are required for the "scroll-over" effect */
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: fixed !important;
    background: white;
}

.bottom-container {
    width: 100%;
    padding-left: 40px;
    padding-right: 40px;
    margin: auto;
    top: 25%;
    position: absolute;
    text-align: center;
}

#main-container p {
    /*font-size: 18px;
    font-weight: 100;
    line-height: 1.2em;*/
}

#main-container h1{
    color: rgba(21,21,21,1);
    font-size: 25px;
    margin-bottom: 0px;
    letter-spacing: 0.05em;
    opacity: 0.8;
    font-weight: 100;
    line-height: 1.2em;
}

#main-container h2{
    font-size: 25px;
    margin-bottom: 0px;
    font-weight: 100;
    line-height: 1.2em;
}

#top-container {
    height: 20vh;
    padding: 20px;
    text-align: center;
    background-color: #2d3e50;
}

#top-container p {
   color: white;
   font-size: 20px; 
}

#tutorial-container {
    background-color: #446CB3;
    height: 100%;
    top: 0%;
    width: 100%;    
    position: absolute;
    color: white;
}

.tutorial-page-container {
    height: 100%;
    background-size: cover;
    background-position-x: 40%;
}

.mini-lesson {
    height: 30%;
    width: 100%;
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
            -webkit-flex-flow: row nowrap;
                -ms-flex-flow: row nowrap;
                    flex-flow: row nowrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.mini-lesson .text {
    width: 70%;
    padding-left: 20px;
}

.mini-lesson .text h2 {
    color: white;
}

.mini-lesson .text p {
    color: white;
}

.mini-lesson .image {
    width: 35%;
}

.tutorial-page-multi {
    height: 100%;
    width: 100%;  
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
    -webkit-flex-flow: column wrap;
        -ms-flex-flow: column wrap;
            flex-flow: column wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    position: relative;
    background-size: cover;
}


.tutorial-page-single {
    height: 100%;
    width: 100%;  
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
    -webkit-flex-flow: column wrap;
        -ms-flex-flow: column wrap;
            flex-flow: column wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    position: relative;    
}

#tutorial-controls {
    height: 10%;
    width: 100%;
    background-color: #3A539B;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tutorial-controls-button:active {
    background-color: #5D1F19;
}

.tutorial-controls-button {
    width: 25%;
    height: 100%;
    text-align: center;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}
/* ... */

